# public/swagger.json
@@ -8,7 +8,6 @@
   "host": "api.astar.network",
   "basePath": "/",
   "schemes": [
-    "http",
     "https"
   ],
   "paths": {
@@ -24,7 +23,11 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "Token symbol (eg. ASTR or SDN)"
+            "description": "Token symbol (eg. ASTR or SDN)",
+            "enum": [
+              "ASTR",
+              "SDN"
+            ]
           }
         ],
         "responses": {
@@ -46,7 +49,13 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar"
+            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar",
+            "enum": [
+              "astar",
+              "shiden",
+              "shibuya",
+              "rocstar"
+            ]
           }
         ],
         "responses": {
@@ -68,7 +77,13 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar"
+            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar",
+            "enum": [
+              "astar",
+              "shiden",
+              "shibuya",
+              "rocstar"
+            ]
           }
         ],
         "responses": {
@@ -90,14 +105,26 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar"
+            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar",
+            "enum": [
+              "astar",
+              "shiden",
+              "shibuya",
+              "rocstar"
+            ]
           },
           {
             "name": "period",
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The period type. Supported values: 7 days 30 days, 90 days, 1 year"
+            "description": "The period type. Supported values: 7 days 30 days, 90 days, 1 year",
+            "enum": [
+              "7 days",
+              "30 days",
+              "90 days",
+              "1 year"
+            ]
           }
         ],
         "responses": {
@@ -119,14 +146,26 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar"
+            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar",
+            "enum": [
+              "astar",
+              "shiden",
+              "shibuya",
+              "rocstar"
+            ]
           },
           {
             "name": "period",
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The period type. Supported values: 7 days 30 days, 90 days, 1 year"
+            "description": "The period type. Supported values: 7 days 30 days, 90 days, 1 year",
+            "enum": [
+              "7 days",
+              "30 days",
+              "90 days",
+              "1 year"
+            ]
           }
         ],
         "responses": {
@@ -148,7 +187,13 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar"
+            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar",
+            "enum": [
+              "astar",
+              "shiden",
+              "shibuya",
+              "rocstar"
+            ]
           }
         ],
         "responses": {
@@ -170,7 +215,13 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar"
+            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar",
+            "enum": [
+              "astar",
+              "shiden",
+              "shibuya",
+              "rocstar"
+            ]
           }
         ],
         "responses": {
@@ -192,7 +243,13 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar"
+            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar",
+            "enum": [
+              "astar",
+              "shiden",
+              "shibuya",
+              "rocstar"
+            ]
           }
         ],
         "responses": {
@@ -214,14 +271,26 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar"
+            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar",
+            "enum": [
+              "astar",
+              "shiden",
+              "shibuya",
+              "rocstar"
+            ]
           },
           {
             "name": "period",
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The period type. Supported values: 7 days 30 days, 90 days, 1 year"
+            "description": "The period type. Supported values: 7 days 30 days, 90 days, 1 year",
+            "enum": [
+              "7 days",
+              "30 days",
+              "90 days",
+              "1 year"
+            ]
           }
         ],
         "responses": {
@@ -243,7 +312,13 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar"
+            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar",
+            "enum": [
+              "astar",
+              "shiden",
+              "shibuya",
+              "rocstar"
+            ]
           },
           {
             "name": "address",
@@ -272,7 +347,13 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar, development"
+            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar, development",
+            "enum": [
+              "astar",
+              "shiden",
+              "shibuya",
+              "rocstar"
+            ]
           }
         ],
         "responses": {
@@ -294,7 +375,13 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar, development"
+            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar, development",
+            "enum": [
+              "astar",
+              "shiden",
+              "shibuya",
+              "rocstar"
+            ]
           },
           {
             "name": "address",
@@ -323,7 +410,14 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar, development"
+            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar, development",
+            "enum": [
+              "astar",
+              "shiden",
+              "shibuya",
+              "rocstar",
+              "development"
+            ]
           }
         ],
         "responses": {
@@ -348,7 +442,11 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden"
+            "description": "The network name. Supported networks: astar, shiden",
+            "enum": [
+              "astar",
+              "shiden"
+            ]
           },
           {
             "name": "contractAddress",
@@ -362,7 +460,13 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "Period to get stats for. Supported periods: 7 eras, 30 eras, 90 eras, all"
+            "description": "Period to get stats for. Supported periods: 7 eras, 30 eras, 90 eras, all",
+            "enum": [
+              "7 eras",
+              "30 eras",
+              "90 eras",
+              "all"
+            ]
           }
         ],
         "responses": {
@@ -384,7 +488,11 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden"
+            "description": "The network name. Supported networks: astar, shiden",
+            "enum": [
+              "astar",
+              "shiden"
+            ]
           },
           {
             "name": "userAddress",
@@ -398,7 +506,13 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The period type. Supported values: 7 days 30 days, 90 days, 1 year"
+            "description": "The period type. Supported values: 7 days 30 days, 90 days, 1 year",
+            "enum": [
+              "7 days",
+              "30 days",
+              "90 days",
+              "1 year"
+            ]
           }
         ],
         "responses": {
@@ -503,7 +617,13 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar"
+            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar",
+            "enum": [
+              "astar",
+              "shiden",
+              "shibuya",
+              "rocstar"
+            ]
           }
         ],
         "responses": {
@@ -525,14 +645,26 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar"
+            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar",
+            "enum": [
+              "astar",
+              "shiden",
+              "shibuya",
+              "rocstar"
+            ]
           },
           {
             "name": "period",
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The period type. Supported values: 7 days 30 days, 90 days, 1 year"
+            "description": "The period type. Supported values: 7 days 30 days, 90 days, 1 year",
+            "enum": [
+              "7 days",
+              "30 days",
+              "90 days",
+              "1 year"
+            ]
           }
         ],
         "responses": {
@@ -554,7 +686,13 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar"
+            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar",
+            "enum": [
+              "astar",
+              "shiden",
+              "shibuya",
+              "rocstar"
+            ]
           },
           {
             "name": "hash",
@@ -583,7 +721,13 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar"
+            "description": "The network name. Supported networks: astar, shiden, shibuya, rocstar",
+            "enum": [
+              "astar",
+              "shiden",
+              "shibuya",
+              "rocstar"
+            ]
           },
           {
             "name": "senderAddress",
@@ -619,14 +763,21 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar"
+            "description": "The network name. Supported networks: astar",
+            "enum": [
+              "astar"
+            ]
           },
           {
             "name": "period",
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The period type. Supported values: 7 days, 30 days"
+            "description": "The period type. Supported values: 7 days, 30 days",
+            "enum": [
+              "7 days",
+              "30 days"
+            ]
           }
         ],
         "responses": {
@@ -648,14 +799,21 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar"
+            "description": "The network name. Supported networks: astar",
+            "enum": [
+              "astar"
+            ]
           },
           {
             "name": "period",
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The period type. Supported values: 7 days, 30 days"
+            "description": "The period type. Supported values: 7 days, 30 days",
+            "enum": [
+              "7 days",
+              "30 days"
+            ]
           }
         ],
         "responses": {
@@ -677,7 +835,10 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The network name. Supported networks: astar"
+            "description": "The network name. Supported networks: astar",
+            "enum": [
+              "astar"
+            ]
           },
           {
             "name": "numberOfMonths",
